2001-03-02  Dave Peticolas  <dave@krondo.com>

	* src/gnome/gnc-dialogs.glade: add title to transfer dialog

	* src/engine/gnc-pricedb.c (gnc_pricedb_destroy): fix mem leak

	* src/gnome/dialog-options.c: cleanup destruction semantics.
	destroy tooltips

	* src/engine/io-gncxml-r.c (gnc_book_load_from_xml_file): fix mem
	leak

	* src/gnome/dialog-utils.c (gnc_build_option_menu): destroy
	tooltips when menu is destroyed

2001-03-01  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-transfer.c: destroy tooltips object

	* src/gnome/window-main.c (gnc_ui_destroy_all_subwindows): now all
	windows use component manager

	* src/gnome/window-report.c: add report to component manager.
	cleaner destruction behavior

	* src/gnome/window-help.c: cleaner destruction behavior

	* src/gnome/gnc-html.c: fix to avoid having the ref the container
	from outside for destruction

	* src/FileDialog.c (gncAddHistory): fix mem leak

	* src/gnome/dialog-options.c (gnc_option_create_date_widget): fix
	bug & mem leak.

2001-03-01  James LewisMoss  <jimdres@mindspring.com>

	* src/engine/gnc-account-xml-v2.c (account_id_handler): fix mem
	leak because xaccAccountSetGUID doesn't keep pointer to guid
	passed in.

2001-03-01  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-sheet.c: if input is cancelled by
	user during delete, ignore the insert callback.

	* src/MultiLedger.c: update for new view api

	* src/register/recncell.{ch}: allow setting a parent to be used
	for the dialog.

	* src/gnome/query-user.c (gnc_verify_dialog_parented): handle null
	parent by using gnc_get_ui_data.

	* src/gnome/window-register.c: eliminate calls to
	xaccSRCheckReconciled. confirmation is done in SplitLedger.c now.

	* src/SplitLedger.c: use new data entry confirmation callback
	to confirm changes to a reconciled split.

	* src/register/splitreg.{ch}: mod for table-allgui changes

	* src/register/table-allgui.{ch}: encapsulate 'view' callbacks